--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>no.uib.thermo-raw-file-parser-gui</groupId>
     <artifactId>ThermoRawFileParserGUI</artifactId>
     <packaging>jar</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <name>ThermoRawFileParserGUI</name>
     <url>https://github.com/compomics/ThermoRawFileParserGUI</url>
     <description>Graphical user interface for the ThermoRawFileParser</description>
