updated thermorawfileparser to 1.1.7 increased pom version fixed multiple file selection bug added peak picking option

--- a/resources/ThermoRawFileParser/log4net.config
+++ b/resources/ThermoRawFileParser/log4net.config
@@ -2,14 +2,14 @@
     <root>
         <level value="INFO" />
         <appender-ref ref="console" />
-        <appender-ref ref="file" />
+        <!--<appender-ref ref="file" />-->
     </root>
     <appender name="console" type="log4net.Appender.ConsoleAppender">
         <layout type="log4net.Layout.PatternLayout">
             <conversionPattern value="%date %level %logger - %message%newline" />
         </layout>
     </appender>
-    <appender name="file" type="log4net.Appender.RollingFileAppender">
+    <!--<appender name="file" type="log4net.Appender.RollingFileAppender">
         <file value="ThermoRawFileParser.log" />
         <appendToFile value="true" />
         <rollingStyle value="Size" />
@@ -19,5 +19,5 @@
         <layout type="log4net.Layout.PatternLayout">
             <conversionPattern value="%date [%thread] %level %logger - %message%newline" />
         </layout>
-    </appender>
+    </appender>-->
 </log4net>
