--- a/resources/ThermoRawFileParser/log4net.config
+++ b/resources/ThermoRawFileParser/log4net.config
@@ -6,7 +6,7 @@
     </root>
     <appender name="console" type="log4net.Appender.ConsoleAppender">
         <layout type="log4net.Layout.PatternLayout">
-            <conversionPattern value="%date{yyyy-MM-dd HH:mm:ss} %message%newline" />
+            <conversionPattern value="%date{yyyy-MM-dd HH:mm:ss} %level %message%newline" />
         </layout>
     </appender>
     <!--<appender name="file" type="log4net.Appender.RollingFileAppender">        
